# spyrit

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Codemeta.json  LICENSE.md  README.md  __init__.py  fht  pyproject.toml  requirements.txt  setup.py  todo.md
.github/workflows/: actionsCreateWheelLinux.sh  example.py  example_2020_ISBI.py  example_2021_OpticsExpress.py  main.yml
Dev_Fadoua/spyrit_restructured/: Updated_Had_Dcan.py
docs/source/: api.rst  build-tuto-local.md  conf.py  external_libraries.rst  index.rst  organisation.rst  refs.rst  sg_execution_times.rst  single_pixel.rst
spyrit/: Mean_coeff.py  NVMS_N_64_M_512.npy  __init__.py  generate_NoiseMeasurementsMatrix.py  main.py  main_Iterative_Net _approaches.py  main_Net _approaches.py  main_STL10.py  main_STL10_inverse_approaches.py  main_STL10_iterative_approaches.py  main_expe_inverse_approaches.py  main_inverse_approaches.py  main_variational_approaches.py  train.py  train_noisy.py
spyrit/Tests/: test_core_Forward_Operator.py
spyrit/acquisiton/: __init__.py  load_data.py
spyrit/core/: AI.py  Acquisition.py  Data_Consistency.py  Forward_Operator.py  Preprocess.py  __init__.py  calib.py  dual_arm.py  forwop.py  inverse.py  meas.py  nnet.py  noise.py  prep.py  preproc.py  recon.py  reconstruction.py  time.py  torch.py  train.py  warp.py
spyrit/dev/: meas.py  prep.py  recon.py
spyrit/former/: _model_Had_DCAN.py  dataset.py  model_ConvRNN.py  model_Had_DCAN.py  model_Had_DCAN_1.py  recon_functions.py
spyrit/hadamard_matrix/: create_hadamard_matrix_with_sage.py  download_hadamard_matrix.py
spyrit/learning/: __init__.py  dataset.py  imagenet_dataset.py  model_ConvRNN.py  model_DCAN.py  model_Had_1D_DCAN.py  model_Had_DCAN.py  model_Had_GRU.py  model_prediction.py  model_prediction_2.py  nets.py
spyrit/misc/: __init__.py  color.py  data_visualisation.py  disp.py  dual_arm.py  examples.py  experimental.py  load_data.py  matrix_tools.py  metrics.py  pattern_choice.py  sampling.py  statistics.py  walsh_hadamard.py
spyrit/pre_processing/: __init__.py
spyrit/reconstruction/: __init__.py  basic_hadamard.py  recon_functions.py  walsh_ordered_recon.py
spyrit/restructured/: Updated_Had_Dcan.py
spyrit/spyrit_restructured/: Updated_Had_Dcan.py  model_Had_DCAN-sauvegarde_10mai_avant_antonio.py
spyrit/test/: run_tests.py  test_core_forwop.py  test_core_meas.py  test_core_noise.py  test_core_prep.py  test_core_preproc.py  test_core_recon.py  test_core_time.py  test_core_warp.py  test_forward_1d.py  test_helpers.py  tuto_core_2d.py  tuto_core_row_1d.py
spyrit/tutorial/: 03_tuto_pseudoinverse_cnn_linear.py  05_tuto_acquisition_split_measurements.py  06_tuto_dcnet_split_measurements.py  README.txt  _tuto_core_2d.py  _tuto_core_2d_drunet.py  _tuto_core_2d_short.py  _tuto_core_2d_short_upgd.py  _tuto_core_row_1d.py  acquisition_operators.py  bonus_tuto_advanced_methods_colab.py  main_sim_split_meas_isbi24_128x128.py  main_sim_split_meas_isbi24_64x64.py  train.py  tuto_01_acquisition_operators.py  tuto_02_pseudoinverse_linear.py  tuto_03_pseudoinverse_cnn_linear.py  tuto_04_train_pseudoinverse_cnn_linear.py  tuto_05_acquisition_split_measurements.py  (+24 more)
tutorial/: README.txt  tuto_01_a_acquisition_operators.py  tuto_01_acquisition_operators.py  tuto_01_b_splitting.py  tuto_01_c_HadamSplit2d.py  tuto_02_noise.py  tuto_02_pseudoinverse_linear.py  tuto_03_pseudoinverse_cnn_linear.py  tuto_03_pseudoinverse_linear.py  tuto_04_b_train_pseudoinverse_cnn_linear.py  tuto_04_pseudoinverse_cnn_linear.py  tuto_04_train_pseudoinverse_cnn_linear.py  tuto_05_acquisition_split_measurements.py  tuto_05_dcnet.py  tuto_06_a_warp.py  tuto_06_b_dynamic.py  tuto_06_dcnet_split_measurements.py  tuto_07_drunet_split_measurements.py  tuto_08_lpgd_split_measurements.py  tuto_09_dynamic.py  tuto_bonus_advanced_methods_colab.py
tutorials/: CNet_noise_robustness.py  CNet_vs_DCNet.py  C_simple.py  DCNet_noise_robustness.py  DC_simple.py  Net_vs_CS_vs_MMSE_Pinv.py  main_net_noise_variability.py  new_C_simple.py  statistics.py  test_color.py  test_cov.py  test_rec.py  test_walsh.py
(+1033 files in other folders)
